--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             const downloadButton = document.getElementById('downloadButton');
             downloadButton.addEventListener('click', () => {
-                window.location.href = 'https://github.com/user-attachments/files/16344930/WeHolic.Asset.zip';
+                window.location.href = 'https://github.com/user-attachments/files/17241448/WeHolic.Pack.zip';
             });
         });
 
