--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeHolic Corp.</title>
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/Qdk3MVwg/FAVICON.png">
     <style>
         /* 폰트 정의 */
         @font-face {
@@ -71,7 +72,7 @@
 
             const downloadButton = document.getElementById('downloadButton');
             downloadButton.addEventListener('click', () => {
-                window.location.href = 'https://github.com/user-attachments/files/17241448/WeHolic.Pack.zip';
+                window.location.href = 'https://github.com/user-attachments/files/17241523/WeHolic.Pack.zip';
             });
         });
 
