--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeHolic Corp.</title>
-    <link rel="icon" type="image/png" href="https://i.postimg.cc/R0G50SpP/FAVICON2.png">
+    <link rel="icon" type="image/png" href="https://i.ibb.co/Gv6N0FR/favicons.png">
     <style>
         /* 폰트 정의 */
         @font-face {
