--- a/color/index.html
+++ b/color/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colors</title>
-    <link rel="icon" type="image/png" href="https://i.postimg.cc/R0G50SpP/FAVICON2.png">
+    <link rel="icon" type="image/png" href="https://i.ibb.co/Gv6N0FR/favicons.png">
     <style>
         body {
             font-family: Arial, sans-serif;
