--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeHolic Corp.</title>
-    <link rel="icon" type="image/png" href="https://i.ibb.co/7rbY1V9/image.png">
+    <link rel="icon" type="image/png" href="https://i.ibb.co/HT7VqHt/FAVI.png">
     <style>
         /* 폰트 정의 */
         @font-face {
